--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ data:
   test_dir: "../data/sign_data/test"
   train_pairs: "../data/sign_data/train_data.csv"
   test_pairs: "../data/sign_data/test_data.csv"
-  train_serialized_path: "../data/sign_data/train_pairs.tfrecord"
+  train_serialized_path: "../data/train_pairs.tfrecord"
   img_height: 128
   img_width: 256
   batch_size: 32
