--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,8 @@ model:
 
 training:
   epochs: 50
-  learning_rate: 0.001
+  learning_rate: 1e-4
+  loss: 'binary_crossentropy'
   optimizer: "adam"
   weight_decay: 1e-5
   early_stopping: True
