--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ model:
 
 training:
   epochs: 50
-  learning_rate: 1e-4
+  learning_rate: 0.0001
   loss: 'binary_crossentropy'
   optimizer: "adam"
   weight_decay: 1e-5
