--- a/config.yaml
+++ b/config.yaml
@@ -21,6 +21,7 @@ data:
   batch_size: 32
   num_workers: 1
   shuffle_buffer_size: 2048
+  TFRecord_buffer_size: 8388608  # 8 MB
 
 model:
   architecture: "SiameseNet"
