--- a/config.yaml
+++ b/config.yaml
@@ -30,6 +30,7 @@ model:
   save_path: "../trained_model"
 
 training:
+  val_fraction: 0.1
   epochs: 1
   learning_rate: 0.0001
   loss: 'binary_crossentropy'
